--- a/work/SpaceWrireTestSuit.glade
+++ b/work/SpaceWrireTestSuit.glade
@@ -24,6 +24,8 @@ along with .  If not, see <http://www.gnu.org/licenses/>.
   <!-- interface-license-type gplv3 -->
   <object class="GtkWindow" id="SpaceWireTestStress">
     <property name="can_focus">False</property>
+    <property name="window_position">center</property>
+    <property name="gravity">center</property>
     <child>
       <object class="GtkNotebook" id="tabtestsuit">
         <property name="visible">True</property>
@@ -463,6 +465,19 @@ along with .  If not, see <http://www.gnu.org/licenses/>.
                             <property name="position">3</property>
                           </packing>
                         </child>
+                        <child>
+                          <object class="GtkButton" id="BtnSimpleTest">
+                            <property name="label" translatable="yes">Start Test</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                          </object>
+                          <packing>
+                            <property name="expand">True</property>
+                            <property name="fill">True</property>
+                            <property name="position">4</property>
+                          </packing>
+                        </child>
                       </object>
                     </child>
                   </object>
@@ -504,12 +519,10 @@ along with .  If not, see <http://www.gnu.org/licenses/>.
                         <property name="spacing">31</property>
                         <property name="layout_style">center</property>
                         <child>
-                          <object class="GtkCheckButton" id="CheckBtnEop">
-                            <property name="label" translatable="yes">Eop Test</property>
+                          <object class="GtkLabel" id="veriloglabeltxfrequency">
                             <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="receives_default">False</property>
-                            <property name="draw_indicator">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="label" translatable="yes">Frequency change</property>
                           </object>
                           <packing>
                             <property name="expand">True</property>
@@ -518,12 +531,9 @@ along with .  If not, see <http://www.gnu.org/licenses/>.
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkCheckButton" id="CheckBtnEep">
-                            <property name="label" translatable="yes">Eep Test</property>
+                          <object class="GtkEntry" id="EntryFrequencyVerilog">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="receives_default">False</property>
-                            <property name="draw_indicator">True</property>
                           </object>
                           <packing>
                             <property name="expand">True</property>
@@ -532,30 +542,17 @@ along with .  If not, see <http://www.gnu.org/licenses/>.
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkCheckButton" id="CheckBtnTimeCode">
-                            <property name="label" translatable="yes">Time Code Test</property>
+                          <object class="GtkButton" id="BtnChangeFrequencyVerilog">
+                            <property name="label" translatable="yes">Change Frequency</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="receives_default">False</property>
-                            <property name="draw_indicator">True</property>
+                            <property name="receives_default">True</property>
+                            <signal name="clicked" handler="on_BtnChangeFrequencyVerilog_clicked" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">True</property>
                             <property name="fill">True</property>
                             <property name="position">2</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkButton" id="BtnSimpleTest">
-                            <property name="label" translatable="yes">Start Test</property>
-                            <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="receives_default">True</property>
-                          </object>
-                          <packing>
-                            <property name="expand">True</property>
-                            <property name="fill">True</property>
-                            <property name="position">3</property>
                           </packing>
                         </child>
                       </object>
